--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relief Realm</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- top banner section started here -->
+    <section>
+        <h1>Let's Help The Helpless who need a lot</h1>
+        <p></p>
+    </section>
 </body>
 </html>
