middle task done

--- a/index.html
+++ b/index.html
@@ -1,17 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relief Realm</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- top banner section started here -->
-    <section>
-        <h1>Let's Help The Helpless who need a lot</h1>
-        <p></p>
+    <section style="background-image: url(images/donation13.jpg);" class="top-banner">
+        <div class="top-inner">
+            <h1>Let's Help The Helpless Who Need a Lot</h1>
+            <p>A donation is a gift for charity, humanitarian aid, or to benefit a cause. A donation may take various
+                forms, including money, alms, services, or goods such as clothing, toys, food, or vehicles. A donation
+                may satisfy medical needs such as blood or organs for transplant.</p>
+            <a class="donate-button" href="#">Donate Here</a>
+        </div>
     </section>
+    <!-- top banner section end here  -->
+    <!-- donate area section start here  -->
+    <section class="donate-area">
+        <h1>Wisely Donate</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem autem, molestiae voluptatibus rem
+            iure dolore obcaecati vel, quam, blanditiis soluta deleniti natus.</p>
+        <ul class="donate-ammount">
+            <li><a href="#">100TK</a></li>
+            <li><a href="#">200TK</a></li>
+            <li><a href="#">500TK</a></li>
+            <li><a href="#">1000TK</a></li>
+        </ul>
+        <div class="donate-field">
+            <input type="number" placeholder="Write the amount of Donation">
+            <a href="#">Donate Now</a>
+        </div>
+    </section>
+    <!-- donate area section end here  -->
+    <!-- donate plan area start here  -->
+    <section class="donate-plan">
+        <div class="section-title">
+            <h1>Donate System</h1>
+            <p>Help a child go to school by sponsoring with our foundation. Online Donation Open! Donate to poor children and ensure education by sponsoring them monthly / yearly.</p>
+        </div>    
+        <div class="plan-details-section">
+            <div class="plan-details">
+                <img src="icons/food.png" alt="">
+                <h3>Food for Them</h3>
+                <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
+            </div>
+            <div class="plan-details">
+                <img src="icons/shelter.png" alt="">
+                <h3>Shelter for Them</h3>
+                <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
+            </div>
+            <div class="plan-details">
+                <img src="icons/Frame-1.png" alt="">
+                <h3>Education for child</h3>
+                <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
+            </div>
+        </div>
+    </section>
+    <!-- donate plan area end here  -->
+    <!-- blog section start here  -->
+    <section>
+        
+    </section>
+    <!-- blog section end here  -->
 </body>
+
 </html>
