--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                 <h3>Food for Them</h3>
                 <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
             </div>
-            <div class="plan-details">
+            <div class="plan-details bg2">
                 <img src="icons/shelter.png" alt="">
                 <h3>Shelter for Them</h3>
                 <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
             </div>
-            <div class="plan-details">
+            <div class="plan-details bg3">
                 <img src="icons/Frame-1.png" alt="">
                 <h3>Education for child</h3>
                 <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
@@ -65,7 +65,35 @@
     </section>
     <!-- donate plan area end here  -->
     <!-- blog section start here  -->
-    <section>
+    <section class="blog-section">
+        <div class="blog-details">
+            <div class="blog-content">
+                <h2>Their lives depend on your donation</h2>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim
+                Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset.</p>
+                <a class="see-more" href="#">Continue Reading</a>
+            </div>
+            <div class="blog-image">
+                <img src="images/donation11.jpg" alt="">
+            </div>
+        </div>
+        <div class="blog-details">
+            <div class="blog-image-2">
+                <img src="images/donation10.jpg" alt="">
+            </div>
+            <div class="blog-content-2">
+                <h2>Their lives depend on your donation</h2>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim
+                Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset.</p>
+                <a class="see-more" href="#">Continue Reading</a>
+            </div>
+        </div>
         
     </section>
     <!-- blog section end here  -->
