--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
     <!-- donate plan area end here  -->
     <!-- blog section start here  -->
     <section class="blog-section">
+        <div class="section-title">
+            <h1>Recent Cases</h1>
+            <p>Here We describe recents cases through our blog posts</p>
+        </div>
         <div class="blog-details">
             <div class="blog-content">
                 <h2>Their lives depend on your donation</h2>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim
-                Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset.</p>
+                <p>The Wildlife Justice Commission, together with Sri Lanka, the United Nations Office on Drugs and Crime (UNODC) and United Nations Food and Agriculture Organization (FAO), and United Nations Ocean Decade co-organised a side event on 29 June on “Crime, corruption, and environment: a criminal justice approach for ocean action and achieving SDG 14”.</p>
                 <a class="see-more" href="#">Continue Reading</a>
             </div>
             <div class="blog-image">
@@ -86,17 +86,59 @@
             </div>
             <div class="blog-content-2">
                 <h2>Their lives depend on your donation</h2>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim
-                Lorem ipsum dolor sit amet, usu cu esse possit
-                referrentur, at eam falli deterruisset.</p>
+                <p>The Wildlife Justice Commission, together with Sri Lanka, the United Nations Office on Drugs and Crime (UNODC) and United Nations Food and Agriculture Organization (FAO), and United Nations Ocean Decade co-organised a side event on 29 June on “Crime, corruption, and environment: a criminal justice approach for ocean action and achieving SDG 14”.</p>
                 <a class="see-more" href="#">Continue Reading</a>
             </div>
         </div>
-        
     </section>
     <!-- blog section end here  -->
+    <!-- volunteer section start here -->
+    <section class="team-area">
+        <div class="section-title">
+            <h1>Our volunteers</h1>
+            <p>Our Volunteers will help you to have details about our donation plans.</p>
+        </div> 
+        <div class="our-team">
+            <div class="team-member">
+                <img src="images/volunteer1.jpg" alt="">
+                <h4>Clark Griffin</h4>
+                <span>Student</span>
+                <a href="https://www.youtube.com/" target="_blank">View Profile</a>
+            </div>
+            <div class="team-member">
+                <img src="images/volunteer2.jpg" alt="">
+                <h4>John Murphy</h4>
+                <span>Businessman</span>
+                <a href="https://www.youtube.com/" target="_blank">View Profile</a>
+            </div>
+            <div class="team-member">
+                <img src="images/volunteer3.jpg" alt="">
+                <h4>Reven Rayes</h4>
+                <span>Artist</span>
+                <a href="https://www.youtube.com/" target="_blank">View Profile</a>
+            </div>
+        </div>
+    </section>
+    <!-- volunteer section end here -->
+    <!-- newsletter starts here  -->
+    <section class="newsletter">
+        <div class="section-title">
+            <h1>Subscribe Our Newsletter</h1>
+            <p>Subscribe to get latest updates from our website</p>
+        </div>
+        <div class="newsletter-form">
+            <input type="email" placeholder="Enter Your Valid Email">
+            <input type="submit" value="Subscribe">
+        </div>
+
+    </section>
+    <!-- newsletter ends here  -->
+    <!-- footer starts here  -->
+    <footer>
+        <h2>Relief Realm</h2>
+        <p>© FY Nila 2022, a Programming Hero Student</p>
+    </footer>
+    <!-- footer ends here  -->
 </body>
 
 </html>
