--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,128 +9,142 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
-
 <body>
     <!-- top banner section started here -->
     <section style="background-image: url(images/donation13.jpg);" class="top-banner">
         <div class="top-inner">
-            <h1>Let's Help The Helpless Who Need a Lot</h1>
-            <p>A donation is a gift for charity, humanitarian aid, or to benefit a cause. A donation may take various
-                forms, including money, alms, services, or goods such as clothing, toys, food, or vehicles. A donation
-                may satisfy medical needs such as blood or organs for transplant.</p>
-            <a class="donate-button" href="#">Donate Here</a>
+            <div class="container">
+                <div class="banner-details">
+                    <h1>Let's Help The Helpless Who Need a Lot</h1>
+                    <p>A donation is a gift for charity, humanitarian aid, or to benefit a cause. A donation may take various
+                    forms, including money, alms, services, or goods such as clothing, toys, food, or vehicles. A donation
+                    may satisfy medical needs such as blood or organs for transplant.</p>
+                    <a class="donate-button" href="#">Donate Here</a>
+                </div>
+            </div>
         </div>
     </section>
     <!-- top banner section end here  -->
     <!-- donate area section start here  -->
     <section class="donate-area">
-        <h1>Wisely Donate</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem autem, molestiae voluptatibus rem
-            iure dolore obcaecati vel, quam, blanditiis soluta deleniti natus.</p>
-        <ul class="donate-ammount">
-            <li><a href="#">100TK</a></li>
-            <li><a href="#">200TK</a></li>
-            <li><a href="#">500TK</a></li>
-            <li><a href="#">1000TK</a></li>
-        </ul>
-        <div class="donate-field">
-            <input type="number" placeholder="Write the amount of Donation">
-            <a href="#">Donate Now</a>
+        <div class="container">
+            <div class="donate-details">
+                <h1>Wisely Donate</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem autem, molestiae voluptatibus rem
+                    iure dolore obcaecati vel, quam, blanditiis soluta deleniti natus.</p>
+                <ul class="donate-ammount">
+                    <li><a href="#">100TK</a></li>
+                    <li><a href="#">200TK</a></li>
+                    <li><a href="#">500TK</a></li>
+                    <li><a href="#">1000TK</a></li>
+                </ul>
+                <div class="donate-field">
+                    <input type="number" placeholder="Write the amount of Donation">
+                    <a href="#">Donate Now</a>
+                </div>
+            </div>
         </div>
     </section>
     <!-- donate area section end here  -->
     <!-- donate plan area start here  -->
     <section class="donate-plan">
-        <div class="section-title">
-            <h1>Donate System</h1>
-            <p>Help a child go to school by sponsoring with our foundation. Online Donation Open! Donate to poor children and ensure education by sponsoring them monthly / yearly.</p>
-        </div>    
-        <div class="plan-details-section">
-            <div class="plan-details">
-                <img src="icons/food.png" alt="">
-                <h3>Food for Them</h3>
-                <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
-            </div>
-            <div class="plan-details bg2">
-                <img src="icons/shelter.png" alt="">
-                <h3>Shelter for Them</h3>
-                <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
-            </div>
-            <div class="plan-details bg3">
-                <img src="icons/Frame-1.png" alt="">
-                <h3>Education for child</h3>
-                <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
+        <div class="container">
+            <div class="section-title">
+                <h1>Donate System</h1>
+                <p>Help a child go to school by sponsoring with our foundation. Online Donation Open! Donate to poor children and ensure education by sponsoring them monthly / yearly.</p>
+            </div>    
+            <div class="plan-details-section">
+                <div class="plan-details">
+                    <img src="icons/food.png" alt="">
+                    <h3>Food for Them</h3>
+                    <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
+                </div>
+                <div class="plan-details bg2">
+                    <img src="icons/shelter.png" alt="">
+                    <h3>Shelter for Them</h3>
+                    <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
+                </div>
+                <div class="plan-details bg3">
+                    <img src="icons/Frame-1.png" alt="">
+                    <h3>Education for child</h3>
+                    <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
+                </div>
             </div>
         </div>
     </section>
     <!-- donate plan area end here  -->
     <!-- blog section start here  -->
     <section class="blog-section">
-        <div class="section-title">
-            <h1>Recent Cases</h1>
-            <p>Here We describe recents cases through our blog posts</p>
-        </div>
-        <div class="blog-details">
-            <div class="blog-content">
-                <h2>Their lives depend on your donation</h2>
-                <p>The Wildlife Justice Commission, together with Sri Lanka, the United Nations Office on Drugs and Crime (UNODC) and United Nations Food and Agriculture Organization (FAO), and United Nations Ocean Decade co-organised a side event on 29 June on “Crime, corruption, and environment: a criminal justice approach for ocean action and achieving SDG 14”.</p>
-                <a class="see-more" href="#">Continue Reading</a>
+        <div class="container">
+            <div class="section-title">
+                <h1>Recent Cases</h1>
+                <p>Here We describe recents cases through our blog posts</p>
             </div>
-            <div class="blog-image">
-                <img src="images/donation11.jpg" alt="">
+            <div class="blog-details">
+                <div class="blog-content">
+                    <h2>Their lives depend on your donation</h2>
+                    <p>The Wildlife Justice Commission, together with Sri Lanka, the United Nations Office on Drugs and Crime (UNODC) and United Nations Food and Agriculture Organization (FAO), and United Nations Ocean Decade co-organised a side event on 29 June on “Crime, corruption, and environment: a criminal justice approach for ocean action and achieving SDG 14”.</p>
+                    <a class="see-more" href="#">Continue Reading</a>
+                </div>
+                <div class="blog-image">
+                    <img src="images/donation11.jpg" alt="">
+                </div>
             </div>
-        </div>
-        <div class="blog-details">
-            <div class="blog-image-2">
-                <img src="images/donation10.jpg" alt="">
-            </div>
-            <div class="blog-content-2">
-                <h2>Their lives depend on your donation</h2>
-                <p>The Wildlife Justice Commission, together with Sri Lanka, the United Nations Office on Drugs and Crime (UNODC) and United Nations Food and Agriculture Organization (FAO), and United Nations Ocean Decade co-organised a side event on 29 June on “Crime, corruption, and environment: a criminal justice approach for ocean action and achieving SDG 14”.</p>
-                <a class="see-more" href="#">Continue Reading</a>
+            <div class="blog-details">
+                <div class="blog-image-2">
+                    <img src="images/donation10.jpg" alt="">
+                </div>
+                <div class="blog-content-2">
+                    <h2>Their lives depend on your donation</h2>
+                    <p>The Wildlife Justice Commission, together with Sri Lanka, the United Nations Office on Drugs and Crime (UNODC) and United Nations Food and Agriculture Organization (FAO), and United Nations Ocean Decade co-organised a side event on 29 June on “Crime, corruption, and environment: a criminal justice approach for ocean action and achieving SDG 14”.</p>
+                    <a class="see-more" href="#">Continue Reading</a>
+                </div>
             </div>
         </div>
     </section>
     <!-- blog section end here  -->
     <!-- volunteer section start here -->
     <section class="team-area">
-        <div class="section-title">
-            <h1>Our volunteers</h1>
-            <p>Our Volunteers will help you to have details about our donation plans.</p>
-        </div> 
-        <div class="our-team">
-            <div class="team-member">
-                <img src="images/volunteer1.jpg" alt="">
-                <h4>Clark Griffin</h4>
-                <span>Student</span>
-                <a href="https://www.youtube.com/" target="_blank">View Profile</a>
-            </div>
-            <div class="team-member">
-                <img src="images/volunteer2.jpg" alt="">
-                <h4>John Murphy</h4>
-                <span>Businessman</span>
-                <a href="https://www.youtube.com/" target="_blank">View Profile</a>
-            </div>
-            <div class="team-member">
-                <img src="images/volunteer3.jpg" alt="">
-                <h4>Reven Rayes</h4>
-                <span>Artist</span>
-                <a href="https://www.youtube.com/" target="_blank">View Profile</a>
+        <div class="container">
+            <div class="section-title">
+                <h1>Our volunteers</h1>
+                <p>Our Volunteers will help you to have details about our donation plans.</p>
+            </div> 
+            <div class="our-team">
+                <div class="team-member">
+                    <img src="images/volunteer1.jpg" alt="">
+                    <h4>Clark Griffin</h4>
+                    <span>Student</span>
+                    <a href="https://www.youtube.com/" target="_blank">View Profile</a>
+                </div>
+                <div class="team-member">
+                    <img src="images/volunteer2.jpg" alt="">
+                    <h4>John Murphy</h4>
+                    <span>Businessman</span>
+                    <a href="https://www.youtube.com/" target="_blank">View Profile</a>
+                </div>
+                <div class="team-member">
+                    <img src="images/volunteer3.jpg" alt="">
+                    <h4>Reven Rayes</h4>
+                    <span>Artist</span>
+                    <a href="https://www.youtube.com/" target="_blank">View Profile</a>
+                </div>
             </div>
         </div>
     </section>
     <!-- volunteer section end here -->
     <!-- newsletter starts here  -->
     <section class="newsletter">
-        <div class="section-title">
-            <h1>Subscribe Our Newsletter</h1>
-            <p>Subscribe to get latest updates from our website</p>
+        <div class="container">
+            <div class="section-title">
+                <h1>Subscribe Our Newsletter</h1>
+                <p>Subscribe to get latest updates from our website</p>
+            </div>
+            <div class="newsletter-form">
+                <input type="email" placeholder="Enter Your Valid Email">
+                <input type="submit" value="Subscribe">
+            </div>
         </div>
-        <div class="newsletter-form">
-            <input type="email" placeholder="Enter Your Valid Email">
-            <input type="submit" value="Subscribe">
-        </div>
-
     </section>
     <!-- newsletter ends here  -->
     <!-- footer starts here  -->
@@ -141,5 +154,4 @@
     </footer>
     <!-- footer ends here  -->
 </body>
-
 </html>
