--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <p>A donation is a gift for charity, humanitarian aid, or to benefit a cause. A donation may take various
                     forms, including money, alms, services, or goods such as clothing, toys, food, or vehicles. A donation
                     may satisfy medical needs such as blood or organs for transplant.</p>
-                    <a class="donate-button" href="#">Donate Here</a>
+                    <a class="donate-button" href="#donate">Donate Here</a>
                 </div>
             </div>
         </div>
@@ -28,10 +28,9 @@
     <!-- donate area section start here  -->
     <section class="donate-area">
         <div class="container">
-            <div class="donate-details">
+            <div id="donate" class="donate-details" >
                 <h1>Wisely Donate</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem autem, molestiae voluptatibus rem
-                    iure dolore obcaecati vel, quam, blanditiis soluta deleniti natus.</p>
+                <p>Yuva Social Movement is working among the underprivileged children and youths.</p>
                 <ul class="donate-ammount">
                     <li><a href="#">100TK</a></li>
                     <li><a href="#">200TK</a></li>
@@ -62,12 +61,12 @@
                 <div class="plan-details bg2">
                     <img src="icons/shelter.png" alt="">
                     <h3>Shelter for Them</h3>
-                    <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
+                    <p>Everyday, more and more families find themselves in a struggle to keep a decent roof over their heads. There are millions of low-income families who live in overcrowded, inadequate and unsafe spatchcock dwellings.</p>
                 </div>
                 <div class="plan-details bg3">
                     <img src="icons/Frame-1.png" alt="">
                     <h3>Education for child</h3>
-                    <p>The food packs will be distributed to nine wards in Blantyre city and three villages in Chikwawa district, which are in the south of the country. Staff members have already given out 122 food packs to families in Blantyre.</p>
+                    <p>If you look at the world closely, then you will see that there is inequality. Governments and other organizations are trying to fix this gap but it will make sense only when you find a way to contribute to the world.</p>
                 </div>
             </div>
         </div>
@@ -83,7 +82,7 @@
             <div class="blog-details">
                 <div class="blog-content">
                     <h2>Their lives depend on your donation</h2>
-                    <p>The Wildlife Justice Commission, together with Sri Lanka, the United Nations Office on Drugs and Crime (UNODC) and United Nations Food and Agriculture Organization (FAO), and United Nations Ocean Decade co-organised a side event on 29 June on “Crime, corruption, and environment: a criminal justice approach for ocean action and achieving SDG 14”.</p>
+                    <p>Bangladesh has been facing a huge deficit of food which compelled people to suffer unconditionally. As poverty is engaged inextricably with our country, so the mistress of the poor community is a beggar description. People from different professionals like ricksha puller, van scooter, cleaners, brick mill workers, barbers, the delivery person.</p>
                     <a class="see-more" href="#">Continue Reading</a>
                 </div>
                 <div class="blog-image">
@@ -95,8 +94,8 @@
                     <img src="images/donation10.jpg" alt="">
                 </div>
                 <div class="blog-content-2">
-                    <h2>Their lives depend on your donation</h2>
-                    <p>The Wildlife Justice Commission, together with Sri Lanka, the United Nations Office on Drugs and Crime (UNODC) and United Nations Food and Agriculture Organization (FAO), and United Nations Ocean Decade co-organised a side event on 29 June on “Crime, corruption, and environment: a criminal justice approach for ocean action and achieving SDG 14”.</p>
+                    <h2>Serving food, love and kindness</h2>
+                    <p>Our volunteers have been serving meals to the homeless once each month since 2022. The volunteers prepare the food at home and serve through the Rough Edges program at St. John's Anglican Church in Sydney and through the two community centers in Melbourne. The vegetarian meal consists of rice, a main vegetable dish, fried noodles or pasta, spring rolls or dumplings, salad, fruit, and dessert.</p>
                     <a class="see-more" href="#">Continue Reading</a>
                 </div>
             </div>
