added linkdin link

--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
                     <img src="images/volunteer1.jpg" alt="">
                     <h4>Clark Griffin</h4>
                     <span>Student</span>
-                    <a href="https://www.youtube.com/" target="_blank">View Profile</a>
+                    <a href="https://www.linkedin.com/in/fy-nila-8080t" target="_blank">View Profile</a>
                 </div>
                 <div class="team-member">
                     <img src="images/volunteer2.jpg" alt="">
                     <h4>John Murphy</h4>
                     <span>Businessman</span>
-                    <a href="https://www.youtube.com/" target="_blank">View Profile</a>
+                    <a href="https://www.linkedin.com/in/fy-nila-8080t" target="_blank">View Profile</a>
                 </div>
                 <div class="team-member">
                     <img src="images/volunteer3.jpg" alt="">
                     <h4>Reven Rayes</h4>
                     <span>Artist</span>
-                    <a href="https://www.youtube.com/" target="_blank">View Profile</a>
+                    <a href="https://www.linkedin.com/in/fy-nila-8080t" target="_blank">View Profile</a>
                 </div>
             </div>
         </div>
@@ -148,8 +148,10 @@
     <!-- newsletter ends here  -->
     <!-- footer starts here  -->
     <footer>
-        <h2>Relief Realm</h2>
-        <p>© FY Nila 2022, a Programming Hero Student</p>
+        <div class="container">
+            <h2>Relief Realm</h2>
+            <p>© FY Nila 2022, a Programming Hero Student</p>
+        </div>
     </footer>
     <!-- footer ends here  -->
 </body>
